--- a/vignettes/v2_bayesian_sampling_workflow.Rmd
+++ b/vignettes/v2_bayesian_sampling_workflow.Rmd
@@ -104,7 +104,7 @@ Laura chooses to use *monetary unit sampling*, as she wants to include more high
 
 ```{r}
 # Step 2: Draw a sample from the financial statements.
-stage2 <- selection(data = BuildIt, size = stage1, units = "values", values = "bookValue")
+stage2 <- selection(data = BuildIt, size = stage1, units = "values", values = "bookValue", method = 'interval')
 ```
 
 Laura can inspect the outcomes of her sampling procedure by using the `summary()` function.
@@ -140,13 +140,13 @@ stage4 <- evaluation(materiality = materiality, conf.level = confidence, data = 
                      values = "bookValue", values.audit = "auditValue", prior = prior)
 ```
 
-Laura can inspect the outcomes of her inference by using the `summary()` function. Her resulting upper bound is 3.433%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
+Laura can inspect the outcomes of her inference by using the `summary()` function. Her resulting upper bound is 2.278%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
 
 ```{r}
 summary(stage4)
 ```
 
-She can inspect the prior and posterior distribution by using the `plot()` function. The shaded area quantifies the area under the posterior distribution that contains 95% of the probability, which ends at 4.433%. Therefore, Laura can state that there is a 95% probability that the misstatement in BuildIt's population is lower than 4.433%.
+She can inspect the prior and posterior distribution by using the `plot()` function. The shaded area quantifies the area under the posterior distribution that contains 95% of the probability, which ends at 2.278%. Therefore, Laura can state that there is a 95% probability that the misstatement in BuildIt's population is lower than 2.278%.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(stage4)
@@ -154,4 +154,4 @@ plot(stage4)
 
 ## Conclusion
 
-Since the 95% upper confidence bound on the misstatement in population is lower than the performance materiality Laura can conclude that there is less than 5% risk that the population contains material misstatement.
+Since the 95% upper confidence bound on the misstatement in population is lower than the performance materiality Laura has obtained sufficient evidence to conclude that there is less than 5% risk that the population contains material misstatement.
