--- a/man/figures/tables/Rmd/pois.lbfi.Rmd
+++ b/man/figures/tables/Rmd/pois.lbfi.Rmd
@@ -38,7 +38,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
+      tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'impartial', materiality = 0.10, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
   }
 }
 
@@ -79,7 +79,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
+      tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'impartial', materiality = 0.05, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
   }
 }
 
@@ -120,7 +120,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
+      tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'impartial', materiality = 0.02, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
   }
 }
 
@@ -161,7 +161,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-      tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
+      tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'impartial', materiality = 0.01, likelihood = 'poisson'))$posterior$hypotheses$bf.hmin)
   }
 }
 
