--- a/man/figures/tables/Rmd/binom.lbfd.Rmd
+++ b/man/figures/tables/Rmd/binom.lbfd.Rmd
@@ -39,7 +39,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.hmin)
+    tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.h1)
   }
 }
 
@@ -81,7 +81,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.hmin)
+    tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.h1)
   }
 }
 
@@ -122,7 +122,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.hmin)
+    tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.h1)
   }
 }
 
@@ -163,7 +163,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.hmin)
+    tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "binomial", prior = TRUE)$posterior$hypotheses$bf.h1)
   }
 }
 
