Update stringer in report

--- a/inst/rmd/report.Rmd
+++ b/inst/rmd/report.Rmd
@@ -173,7 +173,7 @@ These results have been calculated using `r switch(object[["method"]], "poisson"
 `r if (object[["method"]] == "binomial" & !is.null(object[["prior"]])){ paste0("$\\begin{aligned} \\text{The estimated population misstatemen}&\\text{t } \\hat{E}\\text{ is a generalization of the estimated unit misstatement }\\hat{\\theta}\\text{:} \\\\ \\\\ \\hat{E} &= B \\times \\hat{\\theta} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["mle"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["mle"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\\\ \\\\ \\text{The upper bound for the population mi}&\\text{sstatement } E_{",round(object[["conf.level"]], 3),"} \\text{ is a generalization of the unit upper bound } \\theta_{",round(object[["conf.level"]], 3),"} \\text{:} \\\\ \\\\ E_{", round(object[["conf.level"]], 3),"} &= B \\times \\theta_{", round(object[["conf.level"]], 3),"} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["ub"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["ub"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\\\ \\\\ \\text{The other relevant quantities can be de}&\\text{rived using the following formulas:} \\\\ \\\\ \\alpha_0 &= ", format(object[["prior"]][["description"]]$alpha, nsmall = 2, scientific = F, big.mark = ","),"\\\\ \\beta_0 &= ", format(object[["prior"]][["description"]]$beta, nsmall = 2, scientific = F, big.mark = ",")," \\\\ \\alpha_1 &= \\alpha_0 + t =", format(object[["posterior"]][["description"]]$alpha, nsmall = 2, scientific = F, big.mark = ","),"\\\\ \\beta_1 &= \\beta_0 + n - t =", format(object[["posterior"]][["description"]]$beta, nsmall = 2, scientific = F, big.mark = ",")," \\\\ \\hat{\\theta} &= \\frac{\\alpha_1 - 1}{\\alpha_1 + \\beta_1 - 2} = \\frac{", format(object[["posterior"]][["description"]]$alpha, nsmall = 2, scientific = F, big.mark = ",")," - 1}{", format(object[["posterior"]][["description"]]$alpha, nsmall = 2, scientific = F, big.mark = ","), "+ ", format(object[["posterior"]][["description"]]$beta, nsmall = 2, scientific = F, big.mark = ",")," - 2} = ",format(object[["mle"]], nsmall = 2, scientific = F, big.mark = ",")," \\\\ \\theta_{", round(object[["conf.level"]], 3),"} &= \\text{Beta}(1 - \\alpha; \\alpha_0 + t, \\beta_0 + n - t) = \\text{Beta}(",round(object[["conf.level"]], 3),"; ", format(object[["posterior"]][["description"]]$alpha, nsmall = 2, scientific = F, big.mark = ","),", ", format(object[["posterior"]][["description"]]$beta, nsmall = 2, scientific = F, big.mark = ","),") = ", format(object[["ub"]], nsmall = 2, scientific = F, big.mark = ",")," \\\\ t &= \\sum_{i=1}^n \\frac{ist_i - soll_i}{ist_i} = ", format(object[["t"]], nsmall = 2, scientific = F, big.mark = ",")," \\end{aligned}$") }`
 
 <!-- Calculations stringer method -->
-`r if (object[["method"]] == "stringer"){ paste0("$\\begin{aligned} \\text{The estimated population misstatemen}&\\text{t } \\hat{E}\\text{ is a generalization of the estimated unit misstatement }\\hat{\\theta}\\text{:} \\\\ \\\\ \\hat{E} &= B \\times \\hat{\\theta} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["mle"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["mle"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\\\ \\\\ \\text{The upper bound for the population mi}&\\text{sstatement } E_{",round(object[["conf.level"]], 3),"} \\text{ is a generalization of the unit upper bound } \\theta_{",round(object[["conf.level"]], 3),"} \\text{:} \\\\ \\\\ E_{", round(object[["conf.level"]], 3),"} &= B \\times \\theta_{", round(object[["conf.level"]], 3),"} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["ub"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["ub"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\\\ \\\\ \\text{The other relevant quantities can be de}&\\text{rived using the following formulas:} \\\\ \\\\ \\hat{\\theta} &= \\frac{t}{n} = \\frac{", format(object[["t"]], nsmall = 2, scientific = F, big.mark = ","),"}{", object[["n"]],"} = ",format(object[["t"]]/object[["n"]], nsmall = 2, scientific = F, big.mark = ",")," \\\\ \\theta_{", round(object[["conf.level"]], 3),"} &= \\text{Beta}(1 - \\alpha; 1 + t, n - t) = \\text{Beta}(",round(object[["conf.level"]], 3),"; ", format(object[["t"]] + 1, nsmall = 2, scientific = F, big.mark = ","),", ", format(object[["n"]] - object[["t"]], nsmall = 2, scientific = F, big.mark = ","),") = ",format(object[["ub"]], nsmall = 2, scientific = F, big.mark = ",")," \\\\ t &= \\sum_{i=1}^n \\frac{ist_i - soll_i}{ist_i} = ", format(object[["t"]], nsmall = 2, scientific = F, big.mark = ","),"\\end{aligned}$") }`
+`r if (object[["method"]] == "stringer"){ paste0("$\\begin{aligned} \\text{The estimated population misstatemen}&\\text{t } \\hat{E}\\text{ is a generalization of the estimated unit misstatement }\\hat{\\theta}\\text{:} \\\\ \\\\ \\hat{E} &= B \\times \\hat{\\theta} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["mle"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["mle"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\\\ \\\\ \\text{The upper bound for the population mi}&\\text{sstatement } E_{",round(object[["conf.level"]], 3),"} \\text{ is a generalization of the unit upper bound } \\theta_{",round(object[["conf.level"]], 3),"} \\text{:} \\\\ \\\\ E_{", round(object[["conf.level"]], 3),"} &= B \\times \\theta_{", round(object[["conf.level"]], 3),"} ",if(!is.null(object[["N.units"]])){ paste0("\\\\ &= ", format(object[["N.units"]], scientific = F, big.mark=",")," \\times ", format(object[["ub"]], nsmall = 2, scientific = F, big.mark = ",")," = ",format(object[["N.units"]] * object[["ub"]], nsmall = 2, scientific = F, big.mark=","))} else { }," \\end{aligned}$") }`
 
 *Evaluation:*
 
